# ros2_arm-robot

depth_obstacle_detector/: setup.cfg
depth_obstacle_detector/depth_obstacle_detector/: depth_detector.py
vinerobot_example1/: my_send_goal.sh  sim1.py
vinerobot_example1/install/: local_setup.sh  setup.bash  setup.sh
vinerobot_example1/install/kinect_v2/share/kinect_v2/: package.ps1  package.xml
vinerobot_example1/install/kinect_v2/share/kinect_v2/cmake/: kinect_v2Config.cmake
vinerobot_example1/install/mybot/share/mybot/: package.ps1
vinerobot_example1/src/mybot/: CMakeLists.txt  package.xml
vinerobot_example1/src/mybot/config/: kinematics.yaml
vinerobot_example1/src/mybot/launch/: my_moveit_rviz.launch.py  spawn_controllers.launch.py
vinerobot_example1/src/mybot_description/scripts/: model.material
vinerobot_example1/src/mybot_description/urdf/: vinerobot.urdf
vinerobot_example2/: sim.py
vinerobot_example2/install/: setup.ps1  setup.zsh
vinerobot_example2/src/depth_obstacle_detector/: package.xml  setup.py
vinerobot_example2/src/depth_obstacle_detector/depth_obstacle_detector/: depth_detector.py
vinerobot_example2/src/mybot/: .setup_assistant
vinerobot_example2/src/mybot/config/: RRP_Robot.srdf  initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml
vinerobot_example2/src/mybot/launch/: setup_assistant.launch.py
vinerobot_example2/src/mybot/scripts/: sim.py
vinerobot_example2/src/mybot_description/: package.xml  setup.cfg  setup.py
vinerobot_example2/src/mybot_description/urdf/: vinerobot.urdf
(+29 files in other folders)
